--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     學號:1111032027<br>
     班級:資工二甲<br>
     姓名:陳毅罄<br>
-    <a href="./hw2.html">CNM nmsl</a>
+    <a href="hw2.html">CNM nmsl</a>
 </body>
 </html>
