--- a/hw2.html
+++ b/hw2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <center><a href="./index.html">回首頁</a>
+    <center><a href="index.html">回首頁</a>
     <table align="center" border="1px split black" width="300px">
         <tr>
             <td colspan="4" align="center">作業一</td>
